@@ -30,6 +30,8 @@ Not yet released.
   :http:method:`get` and :http:method:`patch` requests that access multiple
   resources.
 - #263: Adds Python 3.3 support; drops Python 2.5 support.
+- #267: Adds compatibility for legacy Microsoft Internet Explorer versions 8
+  and 9.
 - #282: order responses by primary key if no order is specified.
 - #284: catch ``DataError`` and ``ProgrammingError`` exceptions when bad data
   are sent to the server.
